--- a/.github/workflows/frontend-build-deploy-prod.yaml
+++ b/.github/workflows/frontend-build-deploy-prod.yaml
@@ -1,9 +1,9 @@
-name: 'PROD CI/CD'
+name: "PROD CI/CD"
 on:
   push:
     tags:
-      - 'v*'
-      - '!v*-rc*'
+      - "v*"
+      - "!v*-rc*"
 
 jobs:
   deploy_prod:
@@ -31,7 +31,7 @@ jobs:
       - name: Set Node.js 20.x
         uses: actions/setup-node@1a4442cacd436585916779262731d5b162bc6ec7 # v3
         with:
-          node-version: '20'
+          node-version: "20"
       - uses: pnpm/action-setup@v3
         with:
           run_install: true
