--- a/.github/workflows/build-push-develop.yaml
+++ b/.github/workflows/build-push-develop.yaml
@@ -3,11 +3,12 @@ name: "Build & Push Dev"
 on:
   push:
     branches:
-      - 'develop'
-      - 'main'
+      - "develop"
+      - "main"
     paths:
-      - 'packages/**'
-      - '!packages/probing-frontend'
+      - "packages/**"
+      - "!packages/probing-frontend"
+  workflow_dispatch:
 
 jobs:
   build_push_image:
