--- a/.github/workflows/build-push-prod.yaml
+++ b/.github/workflows/build-push-prod.yaml
@@ -3,10 +3,10 @@ name: "Build & Push Prod"
 on:
   push:
     tags:
-      - '[0-9]+.[0-9]+.[0-9]'
+      - "[0-9]+.[0-9]+.[0-9]"
     paths:
-      - 'packages/**'
-      - '!packages/probing-frontend'
+      - "packages/**"
+      - "!packages/probing-frontend"
 
 jobs:
   build_push_image:
