--- a/packages/eservice-event-consumer/package.json
+++ b/packages/eservice-event-consumer/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "pagopa-interop-probing-eservice-operations",
+  "name": "pagopa-interop-probing-eservice-event-consumer",
   "version": "1.0.0",
-  "description": "PagoPA probing eservice operations",
+  "description": "PagoPA probing eservice event consumer",
   "main": "dist",
   "type": "module",
   "scripts": {
@@ -16,37 +16,34 @@
   },
   "keywords": [],
   "author": "",
-  "license": "Apache-2.0",
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "6.21.0",
-    "@typescript-eslint/parser": "6.21.0",
-    "@testcontainers/postgresql": "10.6.0",
-    "@types/dotenv-flow": "3.3.3",
-    "@types/express": "4.17.21",
-    "@types/node": "20.10.4",
-    "@types/uuid": "9.0.8",
-    "testcontainers": "10.6.0",
-    "ts-node": "10.9.2",
-    "typescript": "5.2.2",
-    "vitest": "0.33.0",
-    "eslint": "8.56.0",
-    "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-prettier": "5.1.3",
-    "prettier": "3.2.5"
-  },
+  "license": "ISC",
   "dependencies": {
+    "@pagopa/interop-outbound-models": "1.0.4",
+    "@tsconfig/node-lts": "20.1.1",
     "@zodios/core": "10.9.6",
-    "@zodios/express": "10.6.1",
+    "axios": "1.7.4",
     "dotenv-flow": "3.3.0",
-    "express": "4.20.0",
-    "openapi-zod-client": "1.13.4",
+    "kafka-connector": "workspace:*",
+    "kafkajs": "2.2.4",
     "pagopa-interop-probing-commons": "workspace:*",
     "pagopa-interop-probing-models": "workspace:*",
     "pagopa-interop-probing-eservice-operations-client": "workspace:*",
-    "pg": "8.11.3",
     "ts-pattern": "5.0.6",
-    "typeorm": "0.3.17",
-    "uuid": "9.0.1",
+    "uuid": "10.0.0",
     "zod": "3.23.8"
+  },
+  "devDependencies": {
+    "@types/dotenv-flow": "3.3.3",
+    "@types/node": "20.10.4",
+    "@types/uuid": "9.0.8",
+    "@typescript-eslint/eslint-plugin": "6.21.0",
+    "@typescript-eslint/parser": "6.21.0",
+    "eslint": "8.56.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-prettier": "5.0.0",
+    "prettier": "3.2.5",
+    "ts-node": "10.9.2",
+    "typescript": "5.5.2",
+    "vitest": "0.33.0"
   }
 }
