--- a/packages/eservice-event-consumer/tsconfig.json
+++ b/packages/eservice-event-consumer/tsconfig.json
@@ -1,9 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "declaration": true,
-    "declarationMap": true,
     "outDir": "dist"
   },
-  "include": ["src"]
+  "include": ["src", "test"]
 }
