integration saveTenant and deleteTenant api in eservice-operation, change path open-api operetion, removal generateId function in tenant utils with uuidv4 function

--- a/packages/probing-eservice-operations/open-api/api-eservice-operations-interop-v1.yaml
+++ b/packages/probing-eservice-operations/open-api/api-eservice-operations-interop-v1.yaml
@@ -870,7 +870,7 @@ paths:
                     },
                   ]
 
-  "/eservices/saveTenant":
+  "/tenants/saveTenant":
     post:
       summary: Save tenant
       operationId: saveTenant
@@ -910,7 +910,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/Problem"
 
-  "/eservices/deleteTenant/{tenantId}":
+  "/tenants/{tenantId}/deleteTenant":
     delete:
       summary: Delete tenant
       operationId: deleteTenant
