integration delete eservice and integration kafka producer

--- a/packages/probing-eservice-operations/.env
+++ b/packages/probing-eservice-operations/.env
@@ -3,9 +3,9 @@ PORT=3000
 LOG_LEVEL=info
 
 DB_HOST=127.0.0.1
-DB_NAME=mydatabase
-DB_USERNAME=mydbuser
-DB_PASSWORD=mypassword
+DB_NAME=probing
+DB_USERNAME=postgres
+DB_PASSWORD=postgres
 DB_PORT=55000
 
 SCHEMA_NAME=probing
