--- a/packages/probing-eservice-operations/.env
+++ b/packages/probing-eservice-operations/.env
@@ -5,8 +5,8 @@ LOG_LEVEL=info
 DB_HOST=127.0.0.1
 DB_NAME=probing
 DB_USERNAME=postgres
-DB_PASSWORD=postgres
-DB_PORT=55000
+DB_PASSWORD=m0biles0ft
+DB_PORT=5432
 
 SCHEMA_NAME=probing
 TOLERANCE_MULTIPLIER_IN_MINUTES=3
