--- a/packages/tenant-event-consumer/.env
+++ b/packages/tenant-event-consumer/.env
@@ -1,7 +1,7 @@
 APPLICATION_NAME="interop-probing-tenant-event-consumer"
 LOG_LEVEL=debug
 
-API_OPERATIONS_BASEURL="http://localhost:3000"
+API_OPERATIONS_BASEURL="http://127.0.0.1:3000"
 
 KAFKA_CLIENT_ID="key"
 KAFKA_GROUP_ID="4"
