fix format check

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "start:probing-statistics-api": "turbo start --filter pagopa-interop-probing-statistics-api",
     "start:probing-telemetry-writer": "turbo start --filter pagopa-interop-probing-telemetry-writer",
     "start:event:eservice": "turbo start --filter pagopa-interop-probing-eservice-event-consumer",
+    "start:event:tenant": "turbo start --filter pagopa-interop-probing-tenant-event-consumer",
     "test": "turbo test",
     "test:it": "turbo test:it",
     "build": "turbo build",
