--- a/packages/kafka-connector/package.json
+++ b/packages/kafka-connector/package.json
@@ -14,7 +14,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "Apache-2.0",
   "dependencies": {
     "aws-msk-iam-sasl-signer-js": "1.0.0",
     "kafkajs": "2.2.4",
