--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "format:write": "turbo format:write",
     "generate-model": "turbo generate-model",
     "generate-client": "turbo generate-client",
-    "clean-generated": "turbo clean-generated",
+    "infra:start": "./scripts/infra-start.sh",
+    "infra:stop": "./scripts/infra-stop.sh",
+    "infra:destroy": "./scripts/infra-destroy.sh",
     "prune-dist": "find . -name 'dist' -type d -exec rm -rf {} +",
-    "prune-modules": "find . -name 'node_modules' -type d -exec rm -rf {} +",
-    "infra:start": "./scripts/infra-start.sh"
+    "prune-modules": "find . -name 'node_modules' -type d -exec rm -rf {} +"
   },
   "devDependencies": {
     "@tsconfig/node-lts": "20.1.1",
