--- a/packages/kafka-connector/package.json
+++ b/packages/kafka-connector/package.json
@@ -9,7 +9,7 @@
     ".": "./dist/index.js"
   },
   "scripts": {
-    "lint": "eslint . --ext .ts,.tsx",
+    "lint": "eslint .",
     "build": "tsc"
   },
   "keywords": [],
