--- a/packages/probing-api/package.json
+++ b/packages/probing-api/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "test": "vitest --config ./test/vitest.config.ts",
     "test:it": "vitest db --config ./test/vitest.config.ts",
-    "lint": "eslint . --ext .ts,.tsx -c .eslintrc",
-    "lint:autofix": "eslint . --ext .ts,.tsx --fix",
+    "lint": "eslint .",
+    "lint:autofix": "eslint . --fix",
     "format:check": "prettier --check src",
     "format:write": "prettier --write src",
     "start": "node --watch --no-warnings --loader ts-node/esm -r 'dotenv-flow/config' ./src/index.ts",
