Update ESLint configuration, adjusted rules, updated dependencies

--- a/packages/probing-scheduler/package.json
+++ b/packages/probing-scheduler/package.json
@@ -18,14 +18,15 @@
   "author": "",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@types/uuid": "9.0.8",
     "@types/dotenv-flow": "3.3.3",
     "@types/node": "20.10.4",
+    "@types/uuid": "9.0.8",
     "@typescript-eslint/eslint-plugin": "8.21.0",
     "@typescript-eslint/parser": "8.21.0",
     "eslint": "9.19.0",
     "eslint-config-prettier": "10.0.1",
     "eslint-plugin-prettier": "5.2.3",
+    "globals": "^15.14.0",
     "prettier": "3.2.5",
     "ts-node": "10.9.2",
     "typescript": "5.2.2",
