--- a/packages/clients/eservice-operations/package.json
+++ b/packages/clients/eservice-operations/package.json
@@ -24,12 +24,13 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "8.21.0",
     "@typescript-eslint/parser": "8.21.0",
-    "ts-node": "10.9.2",
-    "typescript": "5.2.2",
     "eslint": "9.19.0",
     "eslint-config-prettier": "10.0.1",
     "eslint-plugin-prettier": "5.2.3",
-    "prettier": "3.2.5"
+    "globals": "^15.14.0",
+    "prettier": "3.2.5",
+    "ts-node": "10.9.2",
+    "typescript": "5.2.2"
   },
   "dependencies": {
     "@zodios/core": "10.9.6",
