--- a/packages/eservice-event-consumer/package.json
+++ b/packages/eservice-event-consumer/package.json
@@ -26,8 +26,8 @@
     "kafka-connector": "workspace:*",
     "kafkajs": "2.2.4",
     "pagopa-interop-probing-commons": "workspace:*",
-    "pagopa-interop-probing-models": "workspace:*",
     "pagopa-interop-probing-eservice-operations-client": "workspace:*",
+    "pagopa-interop-probing-models": "workspace:*",
     "ts-pattern": "5.0.6",
     "uuid": "10.0.0",
     "zod": "3.23.8"
@@ -41,6 +41,7 @@
     "eslint": "9.19.0",
     "eslint-config-prettier": "10.0.1",
     "eslint-plugin-prettier": "5.2.3",
+    "globals": "^15.14.0",
     "prettier": "3.2.5",
     "ts-node": "10.9.2",
     "typescript": "5.2.2",
