--- a/packages/kafka-producer/package.json
+++ b/packages/kafka-producer/package.json
@@ -14,17 +14,17 @@
   },
   "dependencies": {
     "aws-msk-iam-sasl-signer-js": "1.0.0",
-    "express": "4.18.2",
-    "pagopa-interop-probing-commons": "workspace:*",
     "dotenv-flow": "3.3.0",
+    "express": "4.18.2",
     "kafkajs": "2.2.4",
+    "pagopa-interop-probing-commons": "workspace:*",
     "ts-pattern": "5.0.6",
     "zod": "3.23.8"
   },
   "devDependencies": {
     "@pagopa/interop-outbound-models": "^1.0.0",
-    "@types/express": "4.17.17",
     "@types/dotenv-flow": "3.3.3",
+    "@types/express": "4.17.17",
     "@types/node": "20.10.4",
     "@types/uuid": "9.0.8",
     "@typescript-eslint/eslint-plugin": "8.21.0",
@@ -32,6 +32,7 @@
     "eslint": "9.19.0",
     "eslint-config-prettier": "10.0.1",
     "eslint-plugin-prettier": "5.2.3",
+    "globals": "^15.14.0",
     "prettier": "3.2.5",
     "ts-node": "10.9.2",
     "typescript": "5.2.2",
