--- a/packages/models/package.json
+++ b/packages/models/package.json
@@ -26,11 +26,12 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "8.21.0",
     "@typescript-eslint/parser": "8.21.0",
-    "tsc-esm-fix": "2.20.21",
-    "typescript": "5.2.2",
     "eslint": "9.19.0",
     "eslint-config-prettier": "10.0.1",
     "eslint-plugin-prettier": "5.2.3",
-    "prettier": "3.2.5"
+    "globals": "^15.14.0",
+    "prettier": "3.2.5",
+    "tsc-esm-fix": "2.20.21",
+    "typescript": "5.2.2"
   }
 }
