--- a/packages/probing-caller/package.json
+++ b/packages/probing-caller/package.json
@@ -18,18 +18,19 @@
   "author": "",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "8.21.0",
-    "@typescript-eslint/parser": "8.21.0",
     "@types/dotenv-flow": "3.3.3",
     "@types/node": "20.10.4",
     "@types/uuid": "9.0.8",
-    "ts-node": "10.9.2",
-    "typescript": "5.2.2",
-    "vitest": "0.33.0",
+    "@typescript-eslint/eslint-plugin": "8.21.0",
+    "@typescript-eslint/parser": "8.21.0",
     "eslint": "9.19.0",
     "eslint-config-prettier": "10.0.1",
     "eslint-plugin-prettier": "5.2.3",
-    "prettier": "3.2.5"
+    "globals": "^15.14.0",
+    "prettier": "3.2.5",
+    "ts-node": "10.9.2",
+    "typescript": "5.2.2",
+    "vitest": "0.33.0"
   },
   "dependencies": {
     "@aws-sdk/client-kms": "3.549.0",
