--- a/packages/models/package.json
+++ b/packages/models/package.json
@@ -29,7 +29,7 @@
     "eslint": "9.19.0",
     "eslint-config-prettier": "10.0.1",
     "eslint-plugin-prettier": "5.2.3",
-    "globals": "^15.14.0",
+    "globals": "15.14.0",
     "prettier": "3.2.5",
     "tsc-esm-fix": "2.20.21",
     "typescript": "5.2.2"
