--- a/packages/probing-api/package.json
+++ b/packages/probing-api/package.json
@@ -26,7 +26,7 @@
     "@types/node": "20.10.4",
     "@types/supertest": "6.0.2",
     "@types/uuid": "9.0.8",
-    "globals": "^15.14.0",
+    "globals": "15.14.0",
     "supertest": "6.3.4",
     "ts-node": "10.9.2",
     "typescript": "5.2.2",
