--- a/packages/probing-caller/package.json
+++ b/packages/probing-caller/package.json
@@ -26,7 +26,7 @@
     "eslint": "9.19.0",
     "eslint-config-prettier": "10.0.1",
     "eslint-plugin-prettier": "5.2.3",
-    "globals": "^15.14.0",
+    "globals": "15.14.0",
     "prettier": "3.2.5",
     "ts-node": "10.9.2",
     "typescript": "5.2.2",
