--- a/packages/probing-eservice-operations/package.json
+++ b/packages/probing-eservice-operations/package.json
@@ -28,7 +28,7 @@
     "eslint": "9.19.0",
     "eslint-config-prettier": "10.0.1",
     "eslint-plugin-prettier": "5.2.3",
-    "globals": "^15.14.0",
+    "globals": "15.14.0",
     "prettier": "3.2.5",
     "testcontainers": "10.6.0",
     "ts-node": "10.9.2",
