--- a/packages/probing-statistics-api/package.json
+++ b/packages/probing-statistics-api/package.json
@@ -30,7 +30,7 @@
     "eslint": "9.19.0",
     "eslint-config-prettier": "10.0.1",
     "eslint-plugin-prettier": "5.2.3",
-    "globals": "^15.14.0",
+    "globals": "15.14.0",
     "prettier": "3.2.5",
     "supertest": "6.3.4",
     "ts-node": "10.9.2",
