--- a/packages/probing-api/package.json
+++ b/packages/probing-api/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "test": "vitest --config ./test/vitest.config.ts",
     "test:it": "vitest db --config ./test/vitest.config.ts",
-    "lint": "eslint . --ext .ts,.tsx -c .eslintrc",
-    "lint:autofix": "eslint . --ext .ts,.tsx --fix",
+    "lint": "eslint .",
+    "lint:autofix": "eslint . --fix",
     "format:check": "prettier --check src",
     "format:write": "prettier --write src",
     "start": "node --watch --no-warnings --loader ts-node/esm -r 'dotenv-flow/config' ./src/index.ts",
@@ -26,6 +26,7 @@
     "@types/node": "20.10.4",
     "@types/supertest": "6.0.2",
     "@types/uuid": "9.0.8",
+    "globals": "15.14.0",
     "supertest": "6.3.4",
     "ts-node": "10.9.2",
     "typescript": "5.2.2",
