--- a/packages/kafka-producer/package.json
+++ b/packages/kafka-producer/package.json
@@ -22,7 +22,7 @@
     "zod": "3.23.8"
   },
   "devDependencies": {
-    "@pagopa/interop-outbound-models": "^1.0.0",
+    "@pagopa/interop-outbound-models": "1.7.1",
     "@types/dotenv-flow": "3.3.3",
     "@types/express": "4.17.17",
     "@types/node": "20.10.4",
