--- a/packages/probing-eservice-operations/.env
+++ b/packages/probing-eservice-operations/.env
@@ -3,13 +3,14 @@ PORT=3000
 LOG_LEVEL=info
 
 DB_HOST=127.0.0.1
-DB_NAME=mydatabase
-DB_USERNAME=mydbuser
-DB_PASSWORD=mypassword
-DB_PORT=55000
+DB_NAME=root
+DB_USERNAME=root
+DB_PASSWORD=root
+DB_PORT=6000
+DB_USE_SSL=false
+DB_SCHEMA="probing"
 
-SCHEMA_NAME=probing
 TOLERANCE_MULTIPLIER_IN_MINUTES=3
 POLLING_FREQUENCY_THRESHOLD=3
-AWS_REGION=us-west-2
+AWS_REGION="eu-south-1"
 INTEROP_PROBING_OPERATIONS_APP_NAME="pagopa-interop-probing-eservice-operations"
