--- a/packages/kafka-producer/package.json
+++ b/packages/kafka-producer/package.json
@@ -35,8 +35,7 @@
     "globals": "15.14.0",
     "prettier": "3.2.5",
     "ts-node": "10.9.2",
-    "typescript": "5.2.2",
-    "vitest": "0.33.0"
+    "typescript": "5.2.2"
   },
   "keywords": [],
   "author": "",
