--- a/packages/probing-api/package.json
+++ b/packages/probing-api/package.json
@@ -6,7 +6,6 @@
   "type": "module",
   "scripts": {
     "test": "vitest --config ./test/vitest.config.ts",
-    "test:it": "vitest db --config ./test/vitest.config.ts",
     "lint": "eslint .",
     "lint:autofix": "eslint . --fix",
     "format:check": "prettier --check src",
@@ -20,6 +19,7 @@
   "author": "",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@probing/vitest-config": "workspace:*",
     "@types/cors": "2.8.17",
     "@types/dotenv-flow": "3.3.3",
     "@types/express": "4.17.21",
@@ -29,8 +29,7 @@
     "globals": "15.14.0",
     "supertest": "6.3.4",
     "ts-node": "10.9.2",
-    "typescript": "5.2.2",
-    "vitest": "0.33.0"
+    "typescript": "5.2.2"
   },
   "dependencies": {
     "@tsconfig/node-lts": "20.1.1",
