--- a/packages/probing-caller/package.json
+++ b/packages/probing-caller/package.json
@@ -6,7 +6,6 @@
   "type": "module",
   "scripts": {
     "test": "vitest --config ./test/vitest.config.ts",
-    "test:it": "vitest db --config ./test/vitest.config.ts",
     "lint": "eslint .",
     "lint:autofix": "eslint . --fix",
     "format:check": "prettier --check src",
@@ -18,6 +17,7 @@
   "author": "",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@probing/vitest-config": "workspace:*",
     "@types/dotenv-flow": "3.3.3",
     "@types/node": "20.10.4",
     "@types/uuid": "9.0.8",
@@ -29,8 +29,7 @@
     "globals": "15.14.0",
     "prettier": "3.2.5",
     "ts-node": "10.9.2",
-    "typescript": "5.2.2",
-    "vitest": "0.33.0"
+    "typescript": "5.2.2"
   },
   "dependencies": {
     "@aws-sdk/client-kms": "3.549.0",
