--- a/packages/probing-eservice-operations/package.json
+++ b/packages/probing-eservice-operations/package.json
@@ -6,7 +6,6 @@
   "type": "module",
   "scripts": {
     "test": "vitest --config ./test/vitest.config.ts",
-    "test:it": "vitest db --config ./test/vitest.config.ts",
     "lint": "eslint .",
     "lint:autofix": "eslint . --fix",
     "format:check": "prettier --check src",
@@ -18,6 +17,7 @@
   "author": "",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@probing/vitest-config": "workspace:*",
     "@types/dotenv-flow": "3.3.3",
     "@types/express": "4.17.21",
     "@types/node": "20.10.4",
@@ -31,8 +31,7 @@
     "prettier": "3.2.5",
     "testcontainers": "10.6.0",
     "ts-node": "10.9.2",
-    "typescript": "5.2.2",
-    "vitest": "0.33.0"
+    "typescript": "5.2.2"
   },
   "dependencies": {
     "@zodios/core": "10.9.6",
