--- a/packages/clients/eservice-operations/package.json
+++ b/packages/clients/eservice-operations/package.json
@@ -13,8 +13,8 @@
     "lint:autofix": "eslint . --fix",
     "format:check": "prettier --check src",
     "format:write": "prettier --write src",
-    "start": "node --watch --no-warnings --loader ts-node/esm ./src/index.ts",
     "build": "tsc",
+    "check": "tsc --project tsconfig.check.json",
     "generate-client": "mkdir -p ./src/model/generated && pnpm openapi-zod-client '../../probing-eservice-operations/open-api/api-eservice-operations-interop-v1.yaml' -o './src/model/generated/client.ts'",
     "clean-generated": "pnpm exec rm ./src/model/generated/client.ts"
   },
