--- a/packages/probing-frontend/package.json
+++ b/packages/probing-frontend/package.json
@@ -49,6 +49,7 @@
     "eslint-plugin-react-refresh": "0.4.18",
     "prettier": "3.2.5",
     "typescript": "5.2.2",
+    "tsx": "4.20.5",
     "vite": "5.4.21"
   }
 }
