--- a/turbo.json
+++ b/turbo.json
@@ -56,6 +56,14 @@
         "^test"
       ]
     },
+    "check": {
+      "dependsOn": [
+        "generate-client",
+        "generate-model",
+        "^build",
+        "^check"
+      ]
+    },
     "lint": {
       "dependsOn": [
         "^lint"
