--- a/packages/probing-caller/.env
+++ b/packages/probing-caller/.env
@@ -1,8 +1,9 @@
 INTEROP_PROBING_CALLER_NAME="interop-be-probing-caller-test"
-SQS_ENDPOINT_POLL_QUEUE="https://sqs.example.com/poll"
-SQS_ENDPOINT_POLL_RESULT_QUEUE="https://sqs.example.com/poll-result"
-SQS_ENDPOINT_TELEMETRY_RESULT_QUEUE="https://sqs.example.com/telemetry-result"
-AWS_REGION="eu-central-1"
+SQS_ENDPOINT_POLL_QUEUE="http://elasticmq:9324/000000000000/poll"
+SQS_ENDPOINT_POLL_RESULT_QUEUE="http://elasticmq:9324/000000000000/poll-result"
+SQS_ENDPOINT_TELEMETRY_RESULT_QUEUE="http://elasticmq:9324/000000000000/telemetry-result"
+AWS_REGION="eu-south-1"
+AWS_CONFIG_FILE="aws.config.local"
 CONSUMER_POLLING_TIMEOUT_IN_SECONDS="3"
 LOG_LEVEL="info"
 JWT_PAYLOAD_EXPIRE_TIME_IN_SEC="1"
