--- a/packages/probing-scheduler/.env
+++ b/packages/probing-scheduler/.env
@@ -1,7 +1,8 @@
 INTEROP_PROBING_SCHEDULER_NAME="interop-be-probing-scheduler-test"
-API_OPERATIONS_BASEURL="http://localhost:3000"
-SQS_ENDPOINT_POLL_QUEUE="https://sqs.example.com/poll"
-AWS_REGION="us-east-1"
+API_OPERATIONS_BASEURL="http://probing-eservice-operations:3000"
+SQS_ENDPOINT_POLL_QUEUE="http://elasticmq:9324/000000000000/poll"
+AWS_REGION="eu-south-1"
+AWS_CONFIG_FILE="aws.config.local"
 LOG_LEVEL="info"
 SCHEDULER_LIMIT="10"
 SCHEDULER_CRON_EXPRESSION="59 59 23 31 12 1"
