--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "infra:start": "./scripts/infra-start.sh",
     "infra:stop": "./scripts/infra-stop.sh",
     "infra:destroy": "./scripts/infra-destroy.sh",
+    "packages:start": "./scripts/packages-start.sh",
+    "packages:stop": "./scripts/packages-stop.sh",
+    "packages:destroy": "./scripts/packages-destroy.sh",
     "prune-dist": "find . -name 'dist' -type d -exec rm -rf {} +",
     "prune-modules": "find . -name 'node_modules' -type d -exec rm -rf {} +"
   },
