--- a/packages/kafka-producer/.env
+++ b/packages/kafka-producer/.env
@@ -4,4 +4,4 @@ KAFKA_BROKERS="localhost:9092"
 KAFKA_DISABLE_AWS_IAM_AUTH="true"
 LOG_LEVEL=debug
 KAFKA_TOPICS="tenant,eservice"
-AWS_REGION="eu-central-1"
+AWS_REGION="eu-south-1"
