--- a/packages/probing-api/.env
+++ b/packages/probing-api/.env
@@ -5,6 +5,6 @@ PORT=3010
 LOG_LEVEL=info
 
 API_OPERATIONS_BASEURL="http://localhost:3000"
-AWS_REGION="eu-central-1"
+AWS_REGION="eu-south-1"
 TOLERANCE_MULTIPLIER_IN_MINUTES=3
 CORS_ORIGIN_ALLOWED="*"
