--- a/packages/probing-response-updater/.env
+++ b/packages/probing-response-updater/.env
@@ -1,6 +1,7 @@
 INTEROP_PROBING_RESPONSE_UPDATER_NAME="interop-be-probing-response-updater-test"
-SQS_ENDPOINT_POLL_RESULT_QUEUE="https://sqs.example.com/update-response-received"
-AWS_REGION="eu-central-1"
+SQS_ENDPOINT_POLL_RESULT_QUEUE="http://elasticmq:9324/000000000000/update-response-received"
+AWS_REGION="eu-south-1"
+AWS_CONFIG_FILE="aws.config.local"
 CONSUMER_POLLING_TIMEOUT_IN_SECONDS="3"
-API_OPERATIONS_BASEURL="http://localhost:3000"
+API_OPERATIONS_BASEURL="http://probing-eservice-operations:3000"
 LOG_LEVEL=info
