--- a/packages/probing-telemetry-writer/.env
+++ b/packages/probing-telemetry-writer/.env
@@ -1,6 +1,7 @@
 INTEROP_PROBING_TELEMETRY_WRITER_NAME="interop-be-probing-telemetry-writer-test"
-SQS_ENDPOINT_TELEMETRY_RESULT_QUEUE="https://sqs.example.com/telemetry-writer"
-AWS_REGION="eu-central-1"
+SQS_ENDPOINT_TELEMETRY_RESULT_QUEUE="http://elasticmq:9324/000000000000/telemetry-result"
+AWS_REGION="eu-south-1"
+AWS_CONFIG_FILE="aws.config.local"
 CONSUMER_POLLING_TIMEOUT_IN_SECONDS="3"
 TIMESTREAM_RETRIES="10"
 TIMESTREAM_TABLE="table_name"
