refactor(eservice-operations): migrate database access layer from TypeORM to Drizzle ORM

--- a/packages/probing-eservice-operations/tsconfig.json
+++ b/packages/probing-eservice-operations/tsconfig.json
@@ -1,7 +1,12 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "dist"
+    "outDir": "dist",
   },
-  "include": ["src", "test"]
+  "include": [
+    "src",
+    "test",
+    "drizzle.config.ts",
+    "test/vitest.config.ts"
+  ]
 }
