--- a/packages/probing-eservice-operations/package.json
+++ b/packages/probing-eservice-operations/package.json
@@ -22,9 +22,11 @@
     "@types/dotenv-flow": "3.3.3",
     "@types/express": "4.17.21",
     "@types/node": "20.10.4",
+    "@types/pg": "8.15.6",
     "@types/uuid": "9.0.8",
     "@typescript-eslint/eslint-plugin": "8.21.0",
     "@typescript-eslint/parser": "8.21.0",
+    "drizzle-kit": "0.31.6",
     "eslint": "9.19.0",
     "eslint-config-prettier": "10.0.1",
     "eslint-plugin-prettier": "5.2.3",
@@ -39,11 +41,12 @@
     "@zodios/core": "10.9.6",
     "@zodios/express": "10.6.1",
     "dotenv-flow": "3.3.0",
+    "drizzle-orm": "0.44.7",
     "express": "4.20.0",
     "pagopa-interop-probing-commons": "workspace:*",
     "pagopa-interop-probing-eservice-operations-client": "workspace:*",
     "pagopa-interop-probing-models": "workspace:*",
-    "pg": "8.11.3",
+    "pg": "8.15.6",
     "ts-pattern": "5.0.6",
     "typeorm": "0.3.26",
     "uuid": "9.0.1",
