--- a/packages/probing-eservice-operations/tsconfig.check.json
+++ b/packages/probing-eservice-operations/tsconfig.check.json
@@ -3,5 +3,9 @@
   "compilerOptions": {
     "noEmit": true
   },
-  "include": ["src", "test"]
+  "include": [
+    "src",
+    "test",
+    "drizzle.config.ts"
+  ]
 }
