fix(tsconfig): limit compilation to src and separate type-check config

--- a/packages/probing-eservice-operations/tsconfig.json
+++ b/packages/probing-eservice-operations/tsconfig.json
@@ -4,9 +4,6 @@
     "outDir": "dist",
   },
   "include": [
-    "src",
-    "test",
-    "drizzle.config.ts",
-    "test/vitest.config.ts"
+    "src"
   ]
 }
