feat: updated vitest configuration for api/integration scripts, implemented eservice-operations api tests, aligned all reference due fix to services

--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "start:event:eservice": "turbo start --filter pagopa-interop-probing-eservice-event-consumer",
     "start:event:tenant": "turbo start --filter pagopa-interop-probing-tenant-event-consumer",
     "test": "turbo test",
+    "test:integration": "turbo test:integration",
+    "test:api": "turbo test:api",
     "build": "turbo build",
     "check": "turbo check",
     "lint": "turbo lint",
