--- a/packages/probing-api/.env
+++ b/packages/probing-api/.env
@@ -1,10 +1,10 @@
 INTEROP_PROBING_API_APP_NAME="pagopa-interop-probing-api"
 
-HOST=127.0.0.1
+HOST=0.0.0.0
 PORT=3010
 LOG_LEVEL=info
 
-API_OPERATIONS_BASEURL="http://localhost:3000"
+API_OPERATIONS_BASEURL="http://probing-eservice-operations:3000"
 AWS_REGION="eu-south-1"
 TOLERANCE_MULTIPLIER_IN_MINUTES=3
 CORS_ORIGIN_ALLOWED="*"
