feat(eservice-eservice): add api tests and complete integration for eservice-operations

--- a/packages/probing-eservice-operations/open-api/api-eservice-operations-interop-v1.yaml
+++ b/packages/probing-eservice-operations/open-api/api-eservice-operations-interop-v1.yaml
@@ -1013,11 +1013,11 @@ components:
         startTime:
           title: Service verification start time
           type: string
-          format: date-time
+          format: time
         endTime:
           title: Service verification end time
           type: string
-          format: date-time
+          format: time
     Producer:
       type: object
       properties:
